small style changes - issue that want to solve - having overflow: auto to have expiring modal sitting above when scroll takes away transition from delete all btn ...?

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -24,6 +24,12 @@ height: 70px;
 
 .main {
   height: calc(100% - 70px);
+  
+}
+
+.main-receipts {
+  height: 100%;
+  overflow: auto;
 }
 
 .main-scan {
