--- a/src/styles/ExpiringModal.css
+++ b/src/styles/ExpiringModal.css
@@ -7,7 +7,7 @@
 
 .modal-content {
   /* Box */
-  font-size: 0.9em;
+  font-size: 1em;
   background-color: #fefefe;
   border: 1px solid #888;
   border-radius: 3px;
@@ -17,7 +17,7 @@
   position: relative;
   margin: 0 auto;
   padding: 0;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 0 100px #000;
   animation-name: animatetop;
   animation-duration: 1.5s;
   z-index: 1;
